# modorganizer-helper

./: CMakePresets.json
.github/workflows/: build.yml
src/: CMakeLists.txt
src/linux/: main.cpp  privileges.cpp  privileges.h
